[tool.poetry]
name = "imagerandomizer"
version = "0.1.0"
description = ""
authors = ["wosamar <woodnnng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.2"
cloudinary = "^1.44.1"
python-dotenv = "^1.1.1"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
